--- a/home/index.html
+++ b/home/index.html
@@ -14,14 +14,14 @@
             <div id="fullRoom">Your room was full.</div>
 
             <h2>How to make your own HandLand Games</h2>
-            <div>Building new HandLand games at <a href="https://twitter.com/j_stonemountain" target="_blank">twitter.com/j_stonemountain</a></div>
-            <div>In depth "Hands On" Video coming soon at <a href="https://www.youtube.com/@mr.stonemountain" target="_blank">youtube.com/@mr.stonemountain</a></div>
+            <div>Building new HandLand games at <a href="https://twitter.com/darefailed" target="_blank">twitter.com/darefailed</a></div>
+            <div>In depth "Hands On" Video coming soon at <a href="https://www.youtube.com/@darefail" target="_blank">youtube.com/@darefail</a></div>
             <div class="textContainer">
                 <img class="media" src="/demo.webp" />
             </div>
             <div class="textContainer">
                 <div>This is a template for making silly multiplayer games that involve your hands and body. You can submit new games to the repo and I will host them: </div>
-                <div class="textContainer"><a href="https://github.com/jamespsteinberg/handland" target="_blank">https://github.com/jamespsteinberg/handland</a></div>
+                <div class="textContainer"><a href="https://github.com/DareFail/AI-Video-Boilerplate-Pro" target="_blank">https://github.com/DareFail/AI-Video-Boilerplate-Pro</a></div>
                 <div class="textContainer">
                     <h2>Included Games</h2>
     
